--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -26,13 +26,13 @@
         </div>
         {% if user.is_authenticated %}
           <div style="margin-top:0.5em;">
-            <a href="{% url 'reply_comment' post.pk comment.pk %}" class="btn" style="background:#f1c40f; color:#fff; padding:0.3em 0.8em; border-radius:4px; text-decoration:none; margin-right:0.5em;">Reply</a>
+            <a href="{% url 'reply_comment' comment.pk %}" class="btn" style="background:#f1c40f; color:#fff; padding:0.3em 0.8em; border-radius:4px; text-decoration:none; margin-right:0.5em;">Reply</a>
           </div>
         {% endif %}
         {% if user.is_authenticated and user == comment.author %}
           <div style="margin-top:0.5em;">
-            <a href="{% url 'comment_edit' post.pk comment.pk %}" class="btn" style="background:#3498db; color:#fff; padding:0.3em 0.8em; border-radius:4px; text-decoration:none; margin-right:0.5em;">Edit</a>
-            <a href="{% url 'comment_delete' post.pk comment.pk %}" class="btn btn-danger" style="background:#e74c3c; color:#fff; padding:0.3em 0.8em; border-radius:4px; text-decoration:none;">Delete</a>
+            <a href="{% url 'comment_update' comment.pk %}" class="btn" style="background:#3498db; color:#fff; padding:0.3em 0.8em; border-radius:4px; text-decoration:none; margin-right:0.5em;">Edit</a>
+            <a href="{% url 'comment_delete' comment.pk %}" class="btn btn-danger" style="background:#e74c3c; color:#fff; padding:0.3em 0.8em; border-radius:4px; text-decoration:none;">Delete</a>
           </div>
         {% endif %}
         {% for reply in comment.replies.all %}
