--- a/django_blog/blog/templates/blog/home.html
+++ b/django_blog/blog/templates/blog/home.html
@@ -8,6 +8,12 @@
         <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
         <p>{{ post.content|truncatewords:30 }}</p>
         <small>By {{ post.author }} on {{ post.published_date|date:'M d, Y' }}</small>
+              <div class="post-tags">
+                <strong>Tags:</strong>
+                {% for tag in post.tags.all %}
+                  <a href="/tags/{{ tag.name }}/" style="background:#eee; color:#333; padding:0.2em 0.6em; border-radius:3px; margin-right:0.3em; text-decoration:none;">{{ tag.name }}</a>
+                {% empty %}No tags{% endfor %}
+              </div>
       </li>
     {% empty %}
       <li>No posts available.</li>
